perf+test: harden indexing, dedupe callers, surface skipped files
Performance & robustness across the indexing and call-chain paths:

- JdtIndexer: visit enum/record/annotation declarations (was missing
  under JLS_Latest with bindings enabled), parse files in parallel,
  and record skipped files with reasons for diagnostic reporting.
- ProjectIndex: ConcurrentHashMap + LinkedHashSet for O(1) caller
  dedupe; callersOf returns a defensive copy.
- CallNode: iterative toJson (avoids stack overflow on deep chains);
  explicit cycleMarker factory for back-edges.
- CallChainAnalyzer: uses cycleMarker; target-not-found returns a
  clear failure result.
- McpServer: package-private handle() for in-process tests; named
  constants for magic numbers; CloseableInputStream wrapper so
  stop() can unblock the read loop; IllegalArgumentException
  surfaces as "Invalid arguments" (vs generic "Tool execution
  failed"); notifications/cancelled and unknown responses ignored
  cleanly; toolResult/toolErrorResult helpers deduplicate the
  tools/call envelope.
- Tool: ToolResult holds content blocks + isError flag (was
  text+isError only).
- TraceCallersService: extracted from TraceCallersTool; LRU-bounded
  index cache (MAX_CACHED_PROJECTS=8) for long-running MCP sessions;
  buildIndex failures are surfaced, not silently dropped; skipped
  file count included in the response message.
- MavenClasspathResolver: POM_WALK_DEPTH=12 (matches ProjectLoader
  strategy); findJar excludes -sources/-javadoc/-tests jars;
  parallelStream over per-pom walks.
- ProjectLoader: MAX_DIRECTORY_DEPTH=12; src/main/java requires
  grandparent "src" (no more loose .../main/java matching).
- TraceCallersTool: thin MCP adapter over TraceCallersService.

Tests (50 → 59, all green):

- McpServerTest: 12 in-process tests via direct handle() calls.
- MavenSettingsTest: 9 tests, including XXE defense verification
  (DOCTYPE / external-entity rejection).
- MavenClasspathResolverTest: 10 tests using @TempDir with